--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,10 @@
-<!-- copy files -->
-<copy todir="D:\virtualbox_shared_folder">
-	<fileset dir=".">
-		<include name="*.py"/>
-	</fileset>
-</copy>
+<?xml version="1.0" encoding="UTF-8"?>
+<project name="python-hadoop-play" default="copy-python-files" basedir=".">
+	<target name="copy-python-files">
+		<copy todir="D:\virtualbox_shared_folder">
+			<fileset dir="C:\Users\Phillip Kim\git\python-hadoop-play">
+				<include name="*.py"/>
+			</fileset>
+		</copy>
+	</target>
+</project>
